<resources>
    <string-array name="opciones">
        <item>Pescados</item>
        <item>Menu</item>
        <item>Criollos</item>
    </string-array>
    <string name="app_name">App Pedidos</string>
    <string name="title_active_login">Inicio Sesion</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="description_empresa">El Bohemian siempre estuvo ahí. En la misma esquina de Miraﬂores. Siempre fue un lugar tímido a simple vista, en el que se guardaban historias de goles y antiguas fotos de programas de televisión en sus paredes. Con el tiempo fue cambiando de dueño, pero el espíritu supo conservarse y repotenciarse cuando llegó Gastón Acurio y montó su versión de taberna limeña anclada en los ochenta.

El espacio es una pequeña cápsula del tiempo en la que se pueden encontrar aquellos platos tan queridos del repertorio casero, principalmente capitalino, pero puestos al día. La carta corta pero diversa y hasta rotativa anima a seguir volviendo por aquellos clásicos que, a veces, no podemos preparar por la rutina atareada.

Acá están los ‘greatest hits’ reinterpretados, en un principio de la mano de los chefs Bratzo Vergara, Braulio Albino y Martha Palacios (a quienes encontrábamos en la cocina cada vez que íbamos cuando inauguró) y ahora bajo la hábil dirección de la chef Cinzia Repetto.</string>
    <string name="login">Ingresar</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Registrate</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>


    <string name="repo">Platillo A la Carta</string>
    <string name="date">Final Fantasy es una franquicia de medios creada por Hironobu Sakaguchi
        y desarrollada por Square Enix. La franquicia se centra en una serie de fantasía y ciencia ficción de videojuegos RPG.</string>
    <string name="title_activity_main">Platillos</string>
    <string name="subtitle_activity_main">Lo mas Preferidos</string>
    <string name="title_activity_add">Nuevo Platillo</string>
    <string name="title_activity_edit">Datos del Platillo</string>
    <string name="name_form">Nombre</string>
    <string name="date_form">Descripcion</string>
    <string name="url_form">Url imagen</string>
    <string name="description_form">Precio</string>
    <string name="save">Agregar Platillo</string>
    <string name="description">20.00</string>
    <string name="title_activity_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>