<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarritoActivity"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-8dp"
            android:layout_marginTop="-8dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/ic_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#E1F5FE"
            app:cardCornerRadius="16dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="40dp"
                    app:cardMaxElevation="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/cardView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/cardView2">

                    <ImageView
                        android:id="@+id/imagenurlP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:contentDescription="@string/all"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_launcher_foreground"
                        tools:ignore="VectorDrawableCompat" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nombre"
                        android:layout_width="154dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/repo"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:typeface="serif" />

                    <TextView
                        android:id="@+id/descripcion"
                        android:layout_width="157dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:typeface="serif" />

                    <TextView
                        android:id="@+id/precio"
                        android:layout_width="153dp"
                        android:layout_height="39dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:typeface="serif" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>